fixed z-index of decorations in skills section

--- a/components/Home/Skills/Decorations.module.css
+++ b/components/Home/Skills/Decorations.module.css
@@ -3,6 +3,7 @@
 	color: var(--main-color);
 	opacity: 0.8;
 	color: var(--decoration-icon);
+	z-index: 0;
 }
 .reactIcon {
 	width: 700px;
